# llvm-cfg

./: .gitignore  CMakeLists.txt  README.md
.docker/: Dockerfile
api/: sancov_sec.h
demo/: CMakeLists.txt
demo/echo/: CMakeLists.txt  main.c  puts.c
demo/factorial/: CMakeLists.txt  factorial.c  main.cpp
demo/malloc/: CMakeLists.txt  main.c
pass/: CMakeLists.txt  FuncCallPass.cpp  gen.sh
pass/cfg-edge/: CMakeLists.txt  CfgEdgePass.cpp
pass/func-call/: CMakeLists.txt  FuncCallPass.cpp
pass/func-entry/: CMakeLists.txt  FuncEntryPass.cpp
pass/null-malloc/: CMakeLists.txt  NullMallocPass.cpp
tools/: CMakeLists.txt  cfgdump.cc  secdump.c
wrapper/: CMakeLists.txt  argparse.cpp  argparse.h  buf.cpp  buf.h  cc.cpp  cfgmalloc.c  cxx.cpp  exec.cpp  exec.h  wrapper.cpp  wrapper.h
